[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LinkingLines"
version = "2.0.0"
authors = [
  { name="Allison Kubo", email="akubo@uoregon.edu" },
]
description = "Uses Hough Transform and clustering to link line segments and for feature extraction of linear and radial structures"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.7.2",
    "matplotlib_label_lines>=0.6.0",
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "pyproj>=3.6.0",
    "scikit_learn>=1.3.0",
    "scipy>=1.11.2",
    "seaborn>=0.12.2",
    "statsmodels>=0.14.0"
]

[project.urls]
"Homepage" = "https://github.com/aikubo/Linking-and-Clustering-Dikes"
"Bug Tracker" = "https://github.com/aikubo/Linking-and-Clustering-Dikes"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.bumpver]
current_version = "2.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

