[tool.poetry]
name = "linkinglines"
version = "2.1.1"
description = "Process linear geospatial data and link them using the Hough Transform and Agglomerative Clustering"
authors = ["aikubo <alli.i.kubo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aikubo/LinkingLines"
repository = "https://github.com/aikubo/LinkingLines"
documentation = "https://linkinglines.readthedocs.io/en/latest/"
keywords = ["geospatial", "houghtransform", "clustering"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
geopandas = "^0.14.3"
scipy = "^1.12.0"
seaborn = "^0.13.2"
matplotlib-label-lines = "^0.7.0"
statsmodels = "^0.14.1"

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "linkinglines",
    "data"
    ]
filterwarnings = [
    "ignore::UserWarning"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
nbsphinx = "^0.9.3"
jupyterlab = "^4.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-datafiles = "^3.0.0"
pytest-datadir = "^1.5.0"

[tool.poetry_bumpversion.file."src/linkinglines/__init__.py"]
[tool.poetry_bumpversion.file."src/linkinglines/__main__.py"]
[tool.poetry_bumpversion.file."src/linkinglines/ClusterLines.py"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
